--- a/src/main/resources/regression/cw09b.yaml
+++ b/src/main/resources/regression/cw09b.yaml
@@ -2,7 +2,7 @@
 corpus: cw09b
 corpus_path: collections/web/ClueWeb09b/
 
-index_path: indexes/lucene-index.cw09b.pos+docvectors+raw
+index_path: indexes/lucene-index.cw09b
 collection: ClueWeb09Collection
 generator: DefaultLuceneDocumentGenerator
 threads: 44
@@ -11,11 +11,6 @@ index_stats:
   documents: 50220186
   documents (non-empty): 50220156
   total terms: 31300822176
-
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-ranking_root:
 
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -44,14 +39,19 @@ evals:
     metric_precision: 5
 
 topic_reader: Webxml
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[TREC 2010 Web Track (Topics 51-100)](../src/main/resources/topics-and-qrels/topics.web.51-100.txt)"
+    id: trec2010
     path: topics.web.51-100.txt
     qrel: qrels.web.51-100.txt
   - name: "[TREC 2011 Web Track (Topics 101-150)](../src/main/resources/topics-and-qrels/topics.web.101-150.txt)"
+    id: trec2011
     path: topics.web.101-150.txt
     qrel: qrels.web.101-150.txt
   - name: "[TREC 2012 Web Track (Topics 151-200)](../src/main/resources/topics-and-qrels/topics.web.151-200.txt)"
+    id: trec2012
     path: topics.web.151-200.txt
     qrel: qrels.web.151-200.txt
 
