--- a/src/main/resources/regression/dl19-doc-per-passage.yaml
+++ b/src/main/resources/regression/dl19-doc-per-passage.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-doc-per-passage
 corpus_path: collections/msmarco/doc-per-passage/
 
-index_path: indexes/lucene-index.msmarco-doc-per-passage.pos+docvectors+raw
+index_path: indexes/lucene-index.msmarco-doc-per-passage
 collection: JsonCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 1
@@ -11,12 +11,6 @@ index_stats:
   documents: 20544550
   documents (non-empty): 20544550
   total terms: 3197886407
-
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-index_root:
-ranking_root:
 
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -42,6 +36,8 @@ evals:
     can_combine: true
 
 topic_reader: TsvInt
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[DL19 (Doc)](https://trec.nist.gov/data/deep2019.html)"
     id: dl19
