--- a/src/main/resources/regression/car17v2.0-doc2query.yaml
+++ b/src/main/resources/regression/car17v2.0-doc2query.yaml
@@ -2,7 +2,7 @@
 corpus: car-paragraphCorpus.v2.0-doc2query
 corpus_path: collections/car/paragraphCorpus.v2.0-expanded-topk10/
 
-index_path: indexes/lucene-index.car-paragraphCorpus.v2.0-doc2query.pos+docvectors+raw
+index_path: indexes/lucene-index.car-paragraphCorpus.v2.0-doc2query
 collection: JsonCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 30
@@ -11,11 +11,6 @@ index_stats:
   documents: 29794697
   documents (non-empty): 29794694
   total terms: 2541082416
-
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-ranking_root:
 
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -34,6 +29,8 @@ evals:
     can_combine: true
 
 topic_reader: Car
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[TREC 2017 CAR: benchmarkY1test (v2.0)](../src/main/resources/topics-and-qrels/topics.car17v2.0.benchmarkY1test.txt)"
     id: car17v2.0
