--- a/src/main/resources/regression/clef06-fr.yaml
+++ b/src/main/resources/regression/clef06-fr.yaml
@@ -2,7 +2,7 @@
 corpus: clef06-fr
 corpus_path: collections/newswire/clir/clef2006-fr.json
 
-index_path: indexes/lucene-index.clef06-fr.pos+docvectors+raw
+index_path: indexes/lucene-index.clef06-fr
 collection: JsonCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 16
@@ -11,14 +11,6 @@ index_stats:
   documents: 171109
   documents (non-empty): 171109
   total terms: 34352833
-
-search_command: target/appassembler/bin/SearchCollection
-search_options:
-  - -language fr
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-index_root:
-ranking_root:
 
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -44,6 +36,8 @@ evals:
     can_combine: true
 
 topic_reader: TsvString
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[CLEF 2006 (Monolingual French)](../src/main/resources/topics-and-qrels/topics.clef06fr.mono.fr.txt)"
     id: clef06fr
@@ -55,6 +49,7 @@ models:
     display: BM25
     params:
       - -bm25
+      - -language fr
     results:
       map:
         - 0.3111
