--- a/src/main/resources/regression/core17.yaml
+++ b/src/main/resources/regression/core17.yaml
@@ -2,7 +2,7 @@
 corpus: nyt
 corpus_path: collections/newswire/NYTcorpus/
 
-index_path: indexes/lucene-index.nyt.pos+docvectors+raw
+index_path: indexes/lucene-index.nyt
 collection: NewYorkTimesCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 16
@@ -11,11 +11,6 @@ index_stats:
   documents: 1855650
   documents (non-empty): 1855650
   total terms: 751047962
-
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-ranking_root:
 
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -34,6 +29,8 @@ evals:
     can_combine: true
 
 topic_reader: Trec
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[TREC 2017 Common Core Track Topics](../src/main/resources/topics-and-qrels/topics.core17.txt)"
     id: core17
