--- a/src/main/resources/regression/cw12.yaml
+++ b/src/main/resources/regression/cw12.yaml
@@ -2,7 +2,7 @@
 corpus: cw12
 corpus_path: collections/web/ClueWeb12/
 
-index_path: indexes/lucene-index.cw12.pos+docvectors+raw
+index_path: indexes/lucene-index.cw12
 collection: ClueWeb12Collection
 generator: DefaultLuceneDocumentGenerator
 threads: 44
@@ -11,11 +11,6 @@ index_stats:
   documents: 731645141
   documents (non-empty): 731542236
   total terms: 429234508918
-
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-ranking_root:
 
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -44,11 +39,15 @@ evals:
     metric_precision: 5
 
 topic_reader: Webxml
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[TREC 2013 Web Track (Topics 201-250)](../src/main/resources/topics-and-qrels/topics.web.201-250.txt)"
+    id: trec2013
     path: topics.web.201-250.txt
     qrel: qrels.web.201-250.txt
   - name: "[TREC 2014 Web Track (Topics 251-300)](../src/main/resources/topics-and-qrels/topics.web.251-300.txt)"
+    id: trec2014
     path: topics.web.251-300.txt
     qrel: qrels.web.251-300.txt
 
