--- a/src/main/resources/regression/dl21-doc-segmented.yaml
+++ b/src/main/resources/regression/dl21-doc-segmented.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-v2-doc-segmented
 corpus_path: collections/msmarco/msmarco_v2_doc_segmented
 
-index_path: indexes/lucene-index.msmarco-v2-doc-segmented.pos+docvectors+raw
+index_path: indexes/lucene-index.msmarco-v2-doc-segmented
 collection: MsMarcoV2DocCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
@@ -11,12 +11,6 @@ index_stats:
   documents: 124131414
   documents (non-empty): 124131414
   total terms: 24780915974
-
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-index_root:
-ranking_root:
 
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -56,6 +50,8 @@ evals:
     can_combine: false
 
 topic_reader: TsvInt
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[DL21 (Doc)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
     id: dl21
