--- a/src/main/resources/regression/dl21-passage.yaml
+++ b/src/main/resources/regression/dl21-passage.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-v2-passage
 corpus_path: collections/msmarco/msmarco_v2_passage
 
-index_path: indexes/lucene-index.msmarco-v2-passage.pos+docvectors+raw
+index_path: indexes/lucene-index.msmarco-v2-passage
 collection: MsMarcoV2PassageCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
@@ -11,12 +11,6 @@ index_stats:
   documents: 138364198
   documents (non-empty): 138364197
   total terms: 4673266762
-
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-index_root:
-ranking_root:
 
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -56,6 +50,8 @@ evals:
     can_combine: false
 
 topic_reader: TsvInt
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[DL21 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
     id: dl21
