--- a/src/main/resources/regression/fever.yaml
+++ b/src/main/resources/regression/fever.yaml
@@ -12,12 +12,6 @@ index_stats:
   documents (non-empty): 5396060
   total terms: 322660819
 
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-index_root:
-ranking_root:
-
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100
@@ -35,16 +29,18 @@ evals:
     can_combine: true
 
 topic_reader: TsvInt
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[FEVER Paper Development Dataset](https://s3-eu-west-1.amazonaws.com/fever.public/paper_dev.jsonl)"
+    id: dev
     path: topics.fever.dev.txt
     qrel: qrels.fever.dev.txt
 
 models:
   - name: bm25-default
     display: BM25 (Default)
-    params:
-      - -bm25
+    params: -bm25
     results:
       R@100:
         - 0.8974
@@ -52,10 +48,7 @@ models:
         - 0.9477
   - name: bm25-tuned
     display: BM25 (Tuned)
-    params:
-      - -bm25
-      - -bm25.k1 0.9
-      - -bm25.b 0.1
+    params: -bm25 -bm25.k1 0.9 -bm25.b 0.1
     results:
       R@100:
         - 0.8988
