--- a/src/main/resources/regression/clef06-fr.yaml
+++ b/src/main/resources/regression/clef06-fr.yaml
@@ -12,26 +12,26 @@ index_stats:
   documents (non-empty): 171109
   total terms: 34352833
 
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+metrics:
+  - metric: MAP
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m map
     separator: "\t"
     parse_index: 2
-    metric: map
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: P20
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m P.20
     separator: "\t"
     parse_index: 2
-    metric: p20
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: nDCG@20
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m ndcg_cut.20
     separator: "\t"
     parse_index: 2
-    metric: ndcg20
     metric_precision: 4
     can_combine: true
 
@@ -47,13 +47,11 @@ topics:
 models:
   - name: bm25
     display: BM25
-    params:
-      - -bm25
-      - -language fr
+    params: -bm25 -language fr
     results:
-      map:
+      MAP:
         - 0.3111
-      p20:
+      P20:
         - 0.3184
-      ndcg20:
+      nDCG@20:
         - 0.4458
