--- a/src/main/resources/regression/fire12-bn.yaml
+++ b/src/main/resources/regression/fire12-bn.yaml
@@ -2,7 +2,7 @@
 corpus: fire12-bn
 corpus_path: collections/fire/bengali/bn.docs.2012.19032012
 
-index_path: indexes/lucene-index.fire12-bn.pos+docvectors+raw
+index_path: indexes/lucene-index.fire12-bn
 collection: CleanTrecCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 16
@@ -12,51 +12,46 @@ index_stats:
   documents (non-empty): 500122
   total terms: 143972612
 
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-index_root:
-ranking_root:
-search_options:
-  - -language bn
-topic_reader: Trec
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+metrics:
+  - metric: MAP
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m map
     separator: "\t"
     parse_index: 2
-    metric: map
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: P20
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m P.20
     separator: "\t"
     parse_index: 2
-    metric: p20
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: nDCG@20
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m ndcg_cut.20
     separator: "\t"
     parse_index: 2
-    metric: ndcg20
     metric_precision: 4
     can_combine: true
 
+topic_reader: Trec
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[FIRE 2012 (Monolingual Bengali)](../src/main/resources/topics-and-qrels/topics.fire12bn.176-225.txt)"
+    id: fire12
     path: topics.fire12bn.176-225.txt
     qrel: qrels.fire12bn.176-225.txt
 
 models:
   - name: bm25
     display: BM25
-    params:
-      - -bm25
+    params: -bm25 -language bn
     results:
-      map:
+      MAP:
         - 0.2881
-      p20:
+      P20:
         - 0.3740
-      ndcg20:
+      nDCG@20:
         - 0.4261
