--- a/src/main/resources/docgen/templates/mrtydi-v1.1-fi.template
+++ b/src/main/resources/docgen/templates/mrtydi-v1.1-fi.template
@@ -2,8 +2,8 @@
 
 This page documents regression experiments for [Mr. TyDi (Finnish)](https://github.com/castorini/mr.tydi).
 
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/mrtydi-v1.1-fi.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/mrtydi-v1.1-fi.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](${yaml}).
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
