--- a/src/main/resources/regression/mrtydi-v1.1-bn.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-bn.yaml
@@ -8,9 +8,9 @@ generator: DefaultLuceneDocumentGenerator
 threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw -language bn
 index_stats:
-  documents: 2106586
-  documents (non-empty): 2106586
-  total terms: 92529014
+  documents: 304059
+  documents (non-empty): 304059
+  total terms: 15236598
 
 search_command: target/appassembler/bin/SearchCollection
 search_options:
