--- a/src/main/resources/regression/mrtydi-v1.1-sw.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-sw.yaml
@@ -8,9 +8,9 @@ generator: DefaultLuceneDocumentGenerator
 threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw -pretokenized
 index_stats:
-  documents: 2106586
-  documents (non-empty): 2106586
-  total terms: 92529014
+  documents: 136689
+  documents (non-empty): 136689
+  total terms: 4937051
 
 search_command: target/appassembler/bin/SearchCollection
 search_options:
