--- a/src/main/resources/regression/cw09b.yaml
+++ b/src/main/resources/regression/cw09b.yaml
@@ -12,30 +12,30 @@ index_stats:
   documents (non-empty): 50220156
   total terms: 31300822176
 
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+metrics:
+  - metric: MAP
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m map
     separator: "\t"
     parse_index: 2
-    metric: map
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: P30
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m P.30
     separator: "\t"
     parse_index: 2
-    metric: p30
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/gdeval.pl
+  - metric: nDCG@20
+    command: tools/eval/gdeval.pl
     separator: ","
     parse_index: -2
-    metric: ndcg20
     metric_precision: 5
-  - command: tools/eval/gdeval.pl
+  - metric: ERR@20
+    command: tools/eval/gdeval.pl
     separator: ","
     parse_index: -1
-    metric: err20
     metric_precision: 5
 
 topic_reader: Webxml
@@ -58,137 +58,121 @@ topics:
 models:
   - name: bm25
     display: BM25
-    params:
-      - -bm25
+    params: -bm25
     results:
-      map:
+      MAP:
         - 0.1126
         - 0.1094
         - 0.1106
-      p30:
+      P30:
         - 0.2681
         - 0.2513
         - 0.2167
-      ndcg20:
+      nDCG@20:
         - 0.13509
         - 0.18944
         - 0.10145
-      err20:
+      ERR@20:
         - 0.07330
         - 0.09592
         - 0.13043
   - name: bm25+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -rm3
+    params: -bm25 -rm3
     results:
-      map:
+      MAP:
         - 0.0931
         - 0.1085
         - 0.1108
-      p30:
+      P30:
         - 0.2382
         - 0.2487
         - 0.1927
-      ndcg20:
+      nDCG@20:
         - 0.13683
         - 0.19153
         - 0.09183
-      err20:
+      ERR@20:
         - 0.07469
         - 0.09590
         - 0.14937
   - name: bm25+ax
     display: +Ax
-    params:
-      - -bm25
-      - -axiom
-      - -axiom.deterministic
-      - -axiom.beta 0.1
-      - -rerankCutoff 20
+    params: -bm25 -axiom -axiom.deterministic -axiom.beta 0.1 -rerankCutoff 20
     results:
-      map:
+      MAP:
         - 0.0961
         - 0.0986
         - 0.1356
-      p30:
+      P30:
         - 0.2535
         - 0.2367
         - 0.2547
-      ndcg20:
+      nDCG@20:
         - 0.17665
         - 0.18536
         - 0.13878
-      err20:
+      ERR@20:
         - 0.10191
         - 0.09502
         - 0.23994
   - name: ql
     display: QL
-    params:
-      - -qld
+    params: -qld
     results:
-      map:
+      MAP:
         - 0.1060
         - 0.0959
         - 0.1070
-      p30:
+      P30:
         - 0.2438
         - 0.2147
         - 0.2080
-      ndcg20:
+      nDCG@20:
         - 0.11431
         - 0.16311
         - 0.08755
-      err20:
+      ERR@20:
         - 0.05994
         - 0.08502
         - 0.13063
   - name: ql+rm3
     display: +RM3
-    params:
-      - -qld
-      - -rm3
+    params: -qld -rm3
     results:
-      map:
+      MAP:
         - 0.1019
         - 0.0839
         - 0.1058
-      p30:
+      P30:
         - 0.2312
         - 0.2053
         - 0.1980
-      ndcg20:
+      nDCG@20:
         - 0.11824
         - 0.14488
         - 0.08958
-      err20:
+      ERR@20:
         - 0.05918
         - 0.07872
         - 0.13332
   - name: ql+ax
     display: +Ax
-    params:
-      - -qld
-      - -axiom
-      - -axiom.deterministic
-      - -axiom.beta 0.1
-      - -rerankCutoff 20
+    params: -qld -axiom -axiom.deterministic -axiom.beta 0.1 -rerankCutoff 20
     results:
-      map:
+      MAP:
         - 0.1088
         - 0.0860
         - 0.1224
-      p30:
+      P30:
         - 0.2625
         - 0.2120
         - 0.2220
-      ndcg20:
+      nDCG@20:
         - 0.14950
         - 0.15366
         - 0.10911
-      err20:
+      ERR@20:
         - 0.07515
         - 0.08610
         - 0.15644
