--- a/src/main/resources/regression/dl19-doc-per-passage.yaml
+++ b/src/main/resources/regression/dl19-doc-per-passage.yaml
@@ -12,26 +12,26 @@ index_stats:
   documents (non-empty): 20544550
   total terms: 3197886407
 
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+metrics:
+  - metric: MAP
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m map
     separator: "\t"
     parse_index: 2
-    metric: map
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100
     separator: "\t"
     parse_index: 2
-    metric: R@100
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: nDCG@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
-    metric: NDCG@10
     metric_precision: 4
     can_combine: true
 
@@ -47,114 +47,81 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params:
-      - -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
-      map:
+      MAP:
         - 0.2441
-      NDCG@10:
+      nDCG@10:
         - 0.5276
       R@100:
         - 0.3840
   - name: bm25-default+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -rm3
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
-      map:
+      MAP:
         - 0.2880
-      NDCG@10:
+      nDCG@10:
         - 0.5750
       R@100:
         - 0.4356
   - name: bm25-default+ax
     display: +Ax
-    params:
-      - -bm25
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
-      map:
+      MAP:
         - 0.3015
-      NDCG@10:
+      nDCG@10:
         - 0.5590
       R@100:
         - 0.4501
   - name: bm25-default+prf
     display: +PRF
-    params:
-      - -bm25
-      - -bm25prf
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
-      map:
+      MAP:
         - 0.2821
-      NDCG@10:
+      nDCG@10:
         - 0.5591
       R@100:
         - 0.4477
   - name: bm25-tuned
     display: BM25 (tuned)
-    params:
-      - -bm25
-      - -bm25.k1 2.16
-      - -bm25.b 0.61
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
-      map:
+      MAP:
         - 0.2394
-      NDCG@10:
+      nDCG@10:
         - 0.5364
       R@100:
         - 0.3903
   - name: bm25-tuned+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -bm25.k1 2.16
-      - -bm25.b 0.61
-      - -rm3
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
-      map:
+      MAP:
         - 0.2656
-      NDCG@10:
+      nDCG@10:
         - 0.5379
       R@100:
         - 0.4126
   - name: bm25-tuned+ax
     display: +Ax
-    params:
-      - -bm25
-      - -bm25.k1 2.16
-      - -bm25.b 0.61
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
-      map:
+      MAP:
         - 0.2934
-      NDCG@10:
+      nDCG@10:
         - 0.5546
       R@100:
         - 0.4437
   - name: bm25-tuned+prf
     display: +PRF
-    params:
-      - -bm25
-      - -bm25.k1 2.16
-      - -bm25.b 0.61
-      - -bm25prf
-      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
-      map:
+      MAP:
         - 0.2838
-      NDCG@10:
+      nDCG@10:
         - 0.5478
       R@100:
         - 0.4362
