--- a/src/main/resources/regression/car17v1.5.yaml
+++ b/src/main/resources/regression/car17v1.5.yaml
@@ -12,19 +12,19 @@ index_stats:
   documents (non-empty): 29674425
   total terms: 1257909884
 
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -m map
+metrics:
+  - metric: MAP
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m map
     separator: "\t"
     parse_index: 2
-    metric: map
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -m recip_rank
+  - metric: MRR
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recip_rank
     separator: "\t"
     parse_index: 2
-    metric: recip_rank
     metric_precision: 4
     can_combine: true
 
@@ -40,63 +40,49 @@ topics:
 models:
   - name: bm25
     display: BM25
-    params:
-      - -bm25
+    params: -bm25
     results:
-      map:
+      MAP:
         - 0.1562
       recip_rank:
         - 0.2331
   - name: bm25+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -rm3
+    params: -bm25 -rm3
     results:
-      map:
+      MAP:
         - 0.1295
       recip_rank:
         - 0.1923
   - name: bm25+ax
     display: +Ax
-    params:
-      - -bm25
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
+    params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
     results:
-      map:
+      MAP:
         - 0.1358 
       recip_rank:
         - 0.1949
   - name: ql
     display: QL
-    params:
-      - -qld
+    params: -qld
     results:
-      map:
+      MAP:
         - 0.1386
       recip_rank:
         - 0.2037
   - name: ql+rm3
     display: +RM3
-    params:
-      - -qld
-      - -rm3
+    params: -qld -rm3
     results:
-      map:
+      MAP:
         - 0.1080
       recip_rank:
         - 0.1599
   - name: ql+ax
     display: +Ax
-    params:
-      - -qld
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
+    params: -qld -axiom -axiom.deterministic -rerankCutoff 20
     results:
-      map:
+      MAP:
         - 0.1048
       recip_rank:
         - 0.1524
