--- a/src/main/resources/regression/dl19-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl19-passage-docTTTTTquery.yaml
@@ -12,26 +12,26 @@ index_stats:
   documents (non-empty): 8841823
   total terms: 1986612263
 
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+metrics:
+  - metric: MAP
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m map -c -l 2
     separator: "\t"
     parse_index: 2
-    metric: map
     metric_precision: 4
     can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m recall.1000 -c -l 2
     separator: "\t"
     parse_index: 2
-    metric: R@1000
     metric_precision: 4
     can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: nDCG@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m ndcg_cut.10 -c
     separator: "\t"
     parse_index: 2
-    metric: NDCG@10
     metric_precision: 4
     can_combine: false
 
@@ -47,78 +47,61 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params:
-      - -bm25
+    params: -bm25
     results:
-      map:
+      MAP:
         - 0.4034
-      NDCG@10:
+      nDCG@10:
         - 0.6417
       R@1000:
         - 0.8310
   - name: bm25-default+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -rm3
+    params: -bm25 -rm3
     results:
-      map:
+      MAP:
         - 0.4485
-      NDCG@10:
+      nDCG@10:
         - 0.6548
       R@1000:
         - 0.8861
   - name: bm25-tuned
     display: BM25 (tuned)
-    params:
-      - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68
     results:
-      map:
+      MAP:
         - 0.4052
-      NDCG@10:
+      nDCG@10:
         - 0.6482
       R@1000:
         - 0.8269
   - name: bm25-tuned+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
-      - -rm3
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rm3
     results:
-      map:
+      MAP:
         - 0.4520
-      NDCG@10:
+      nDCG@10:
         - 0.6614
       R@1000:
         - 0.8826
   - name: bm25-tuned2
     display: BM25 (tuned2)
-    params:
-      - -bm25
-      - -bm25.k1 2.18
-      - -bm25.b 0.86
+    params: -bm25 -bm25.k1 2.18 -bm25.b 0.86
     results:
-      map:
+      MAP:
         - 0.4046
-      NDCG@10:
+      nDCG@10:
         - 0.6336
       R@1000:
         - 0.8134
   - name: bm25-tuned2+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -bm25.k1 2.18
-      - -bm25.b 0.86
-      - -rm3
+    params: -bm25 -bm25.k1 2.18 -bm25.b 0.86 -rm3
     results:
-      map:
+      MAP:
         - 0.4360
-      NDCG@10:
+      nDCG@10:
         - 0.6528
       R@1000:
         - 0.8424
