--- a/src/main/resources/regression/dl20-doc-docTTTTTquery-per-doc.yaml
+++ b/src/main/resources/regression/dl20-doc-docTTTTTquery-per-doc.yaml
@@ -12,33 +12,33 @@ index_stats:
   documents (non-empty): 3213834
   total terms: 3748332076
 
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+metrics:
+  - metric: MAP
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m map
     separator: "\t"
     parse_index: 2
-    metric: map
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: nDCG@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
-    metric: NDCG@10
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: MRR
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recip_rank
     separator: "\t"
     parse_index: 2
-    metric: RR
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100
     separator: "\t"
     parse_index: 2
-    metric: R@100
     metric_precision: 4
     can_combine: true
 
@@ -54,63 +54,49 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params:
-      - -bm25
-      - -hits 100  # Note, this is different DL 2020 passage ranking!
+    params: -bm25 -hits 100  # Note, this is different DL 2020 passage ranking!
     results:
-      map:
+      MAP:
         - 0.4230
-      NDCG@10:
+      nDCG@10:
         - 0.5885
-      RR:
+      MRR:
         - 0.9369
       R@100:
         - 0.6412
   - name: bm25-default+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -rm3
-      - -hits 100  # Note, this is different DL 2020 passage ranking!
+    params: -bm25 -rm3 -hits 100  # Note, this is different DL 2020 passage ranking!
     results:
-      map:
+      MAP:
         - 0.4228
-      NDCG@10:
+      nDCG@10:
         - 0.5407
-      RR:
+      MRR:
         - 0.8147
       R@100:
         - 0.6555
   - name: bm25-tuned
     display: BM25 (tuned)
-    params:
-      - -bm25
-      - -bm25.k1 4.68
-      - -bm25.b 0.87
-      - -hits 100  # Note, this is different DL 2020 passage ranking!
+    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -hits 100  # Note, this is different DL 2020 passage ranking!
     results:
-      map:
+      MAP:
         - 0.4098
-      NDCG@10:
+      nDCG@10:
         - 0.5852
-      RR:
+      MRR:
         - 0.9439
       R@100:
         - 0.6178
   - name: bm25-tuned+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -bm25.k1 4.68
-      - -bm25.b 0.87
-      - -rm3
-      - -hits 100  # Note, this is different DL 2020 passage ranking!
+    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -rm3 -hits 100  # Note, this is different DL 2020 passage ranking!
     results:
-      map:
+      MAP:
         - 0.4104
-      NDCG@10:
+      nDCG@10:
         - 0.5743
-      RR:
+      MRR:
         - 0.8701
       R@100:
         - 0.6127
