--- a/src/main/resources/regression/dl19-doc.yaml
+++ b/src/main/resources/regression/dl19-doc.yaml
@@ -111,7 +111,7 @@ models:
     results:
       MAP:
         - 0.2816
-      NDCG@10:
+      nDCG@10:
         - 0.5245
       R@100:
         - 0.4399
