--- a/src/main/resources/regression/dl20-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl20-passage-docTTTTTquery.yaml
@@ -12,40 +12,40 @@ index_stats:
   documents (non-empty): 8841823
   total terms: 1986612263
 
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+metrics:
+  - metric: MAP
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m map -l 2
     separator: "\t"
     parse_index: 2
-    metric: map
     metric_precision: 4
     can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: nDCG@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
-    metric: NDCG@10
     metric_precision: 4
     can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: MRR
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recip_rank -l 2
     separator: "\t"
     parse_index: 2
-    metric: RR
     metric_precision: 4
     can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100 -l 2
     separator: "\t"
     parse_index: 2
-    metric: R@100
     metric_precision: 4
     can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.1000 -l 2
     separator: "\t"
     parse_index: 2
-    metric: R@1000
     metric_precision: 4
     can_combine: false
 
@@ -61,14 +61,13 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params:
-      - -bm25
+    params: -bm25
     results:
-      map:
+      MAP:
         - 0.4074
-      NDCG@10:
+      nDCG@10:
         - 0.6187
-      RR:
+      MRR:
         - 0.7326
       R@100:
         - 0.7044
@@ -76,15 +75,13 @@ models:
         - 0.8452
   - name: bm25-default+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -rm3
+    params: -bm25 -rm3
     results:
-      map:
+      MAP:
         - 0.4295
-      NDCG@10:
+      nDCG@10:
         - 0.6172
-      RR:
+      MRR:
         - 0.7424
       R@100:
         - 0.7153
@@ -92,16 +89,13 @@ models:
         - 0.8699
   - name: bm25-tuned
     display: BM25 (tuned)
-    params:
-      - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68
     results:
-      map:
+      MAP:
         - 0.4082
-      NDCG@10:
+      nDCG@10:
         - 0.6192
-      RR:
+      MRR:
         - 0.7425
       R@100:
         - 0.7046
@@ -109,17 +103,13 @@ models:
         - 0.8443
   - name: bm25-tuned+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
-      - -rm3
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rm3
     results:
-      map:
+      MAP:
         - 0.4296
-      NDCG@10:
+      nDCG@10:
         - 0.6177
-      RR:
+      MRR:
         - 0.7422
       R@100:
         - 0.7143
@@ -127,16 +117,13 @@ models:
         - 0.8692
   - name: bm25-tuned2
     display: BM25 (tuned2)
-    params:
-      - -bm25
-      - -bm25.k1 2.18
-      - -bm25.b 0.86
+    params: -bm25 -bm25.k1 2.18 -bm25.b 0.86
     results:
-      map:
+      MAP:
         - 0.4171
-      NDCG@10:
+      nDCG@10:
         - 0.6265
-      RR:
+      MRR:
         - 0.7467
       R@100:
         - 0.7044
@@ -144,17 +131,13 @@ models:
         - 0.8393
   - name: bm25-tuned2+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -bm25.k1 2.18
-      - -bm25.b 0.86
-      - -rm3
+    params: -bm25 -bm25.k1 2.18 -bm25.b 0.86 -rm3
     results:
-      map:
+      MAP:
         - 0.4347
-      NDCG@10:
+      nDCG@10:
         - 0.6232
-      RR:
+      MRR:
         - 0.7327
       R@100:
         - 0.7109
