--- a/src/main/resources/regression/dl20-passage.yaml
+++ b/src/main/resources/regression/dl20-passage.yaml
@@ -12,40 +12,40 @@ index_stats:
   documents (non-empty): 8841823
   total terms: 352316036
 
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+metrics:
+  - metric: MAP
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m map -l 2
     separator: "\t"
     parse_index: 2
-    metric: map
     metric_precision: 4
     can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: nDCG@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
-    metric: NDCG@10
     metric_precision: 4
     can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: MRR
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recip_rank -l 2
     separator: "\t"
     parse_index: 2
-    metric: RR
     metric_precision: 4
     can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100 -l 2
     separator: "\t"
     parse_index: 2
-    metric: R@100
     metric_precision: 4
     can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.1000 -l 2
     separator: "\t"
     parse_index: 2
-    metric: R@1000
     metric_precision: 4
     can_combine: false
 
@@ -61,14 +61,13 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params:
-      - -bm25
+    params: -bm25
     results:
-      map:
+      MAP:
         - 0.2856
-      NDCG@10:
+      nDCG@10:
         - 0.4796
-      RR:
+      MRR:
         - 0.6585
       R@100:
         - 0.5599
@@ -76,15 +75,13 @@ models:
         - 0.7863
   - name: bm25-default+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -rm3
+    params: -bm25 -rm3
     results:
-      map:
+      MAP:
         - 0.3019
-      NDCG@10:
+      nDCG@10:
         - 0.4821
-      RR:
+      MRR:
         - 0.6360
       R@100:
         - 0.6046
@@ -92,17 +89,13 @@ models:
         - 0.8217
   - name: bm25-default+ax
     display: +Ax
-    params:
-      - -bm25
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
+    params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
     results:
-      map:
+      MAP:
         - 0.3240
-      NDCG@10:
+      nDCG@10:
         - 0.4834
-      RR:
+      MRR:
         - 0.6096
       R@100:
         - 0.6428
@@ -110,15 +103,13 @@ models:
         - 0.8483
   - name: bm25-default+prf
     display: +PRF
-    params:
-      - -bm25
-      - -bm25prf
+    params: -bm25 -bm25prf
     results:
-      map:
+      MAP:
         - 0.3117
-      NDCG@10:
+      nDCG@10:
         - 0.4721
-      RR:
+      MRR:
         - 0.6157
       R@100:
         - 0.5783
@@ -126,16 +117,13 @@ models:
         - 0.8074
   - name: bm25-tuned
     display: BM25 (tuned)
-    params:
-      - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68
     results:
-      map:
+      MAP:
         - 0.2876
-      NDCG@10:
+      nDCG@10:
         - 0.4876
-      RR:
+      MRR:
         - 0.6594
       R@100:
         - 0.5669
@@ -143,17 +131,13 @@ models:
         - 0.8031
   - name: bm25-tuned+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
-      - -rm3
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rm3
     results:
-      map:
+      MAP:
         - 0.3056
-      NDCG@10:
+      nDCG@10:
         - 0.4808
-      RR:
+      MRR:
         - 0.6278
       R@100:
         - 0.6333
@@ -161,19 +145,13 @@ models:
         - 0.8286
   - name: bm25-tuned+ax
     display: +Ax
-    params:
-      - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -axiom -axiom.deterministic -rerankCutoff 20
     results:
-      map:
+      MAP:
         - 0.3322
-      NDCG@10:
+      nDCG@10:
         - 0.5027
-      RR:
+      MRR:
         - 0.6328
       R@100:
         - 0.6468
@@ -181,17 +159,13 @@ models:
         - 0.8455
   - name: bm25-tuned+prf
     display: +PRF
-    params:
-      - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
-      - -bm25prf
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -bm25prf
     results:
-      map:
+      MAP:
         - 0.3136
-      NDCG@10:
+      nDCG@10:
         - 0.4788
-      RR:
+      MRR:
         - 0.6252
       R@100:
         - 0.5782
