--- a/src/main/resources/regression/msmarco-doc.yaml
+++ b/src/main/resources/regression/msmarco-doc.yaml
@@ -12,26 +12,26 @@ index_stats:
   documents (non-empty): 3213835
   total terms: 2748636047
 
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+metrics:
+  - metric: MAP
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m map
     separator: "\t"
     parse_index: 2
-    metric: map
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100
     separator: "\t"
     parse_index: 2
-    metric: R@100
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
-    metric: R@1000
     metric_precision: 4
     can_combine: true
 
@@ -49,7 +49,7 @@ models:
     display: BM25 (default)
     params: -bm25
     results:
-      map:
+      MAP:
         - 0.2310
       R@100:
         - 0.7279
@@ -59,7 +59,7 @@ models:
     display: +RM3
     params: -bm25 -rm3
     results:
-      map:
+      MAP:
         - 0.1632
       R@100:
         - 0.6765
@@ -69,7 +69,7 @@ models:
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 3.44 -bm25.b 0.87
     results:
-      map:
+      MAP:
         - 0.2788
       R@100:
         - 0.8065
@@ -79,7 +79,7 @@ models:
     display: +RM3
     params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -rm3
     results:
-      map:
+      MAP:
         - 0.2289
       R@100:
         - 0.7872
@@ -89,7 +89,7 @@ models:
     display: BM25 (tuned2)
     params: -bm25 -bm25.k1 4.46 -bm25.b 0.82
     results:
-      map:
+      MAP:
         - 0.2775
       R@100:
         - 0.8076
@@ -99,7 +99,7 @@ models:
     display: +RM3
     params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rm3
     results:
-      map:
+      MAP:
         - 0.2238
       R@100:
         - 0.7789
